# Dekanat

./: CMakeLists.txt  main.cpp  main_database_manager.cpp  main_database_manager.hpp  random_generator.cpp  random_generator.hpp  string_utils.cpp  string_utils.hpp  validations.cpp  validations.hpp
controllers/: DeleteAccountController.cpp  DeleteAccountController.hpp  GroupPageController.cpp  GroupPageController.hpp  GroupsPageController.cpp  GroupsPageController.hpp  LogInController.cpp  LogInController.hpp  LogInPageController.cpp  LogInPageController.hpp  LogInSubmitController.cpp  LogInSubmitController.hpp  NewGroupPageController.cpp  NewGroupPageController.hpp  NewStudentPageController.cpp  NewStudentPageController.hpp  SearchPageController.cpp  SearchPageController.hpp  SignUpController.cpp  SignUpController.hpp  SignUpPageController.cpp  SignUpPageController.hpp  SignUpSubmitController.cpp  SignUpSubmitController.hpp  WelcomePageController.cpp  WelcomePageController.hpp
models/: Admin.cpp  Admin.hpp  Group.cpp  Group.hpp  Student.cpp  Student.hpp  User.cpp  User.hpp
static/: config.json
static/css/: group.css  groups.css  main.css  new_group.css  new_student.css  search.css  signup.css
views/: GroupPage.csp  GroupsPage.csp  LogInPage.csp  NewGroupPage.csp  NewStudentPage.csp  SearchPage.csp  SignUpPage.csp  WelcomePage.csp
